[project]
name = "datapallet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.128.0",
    "httpx[http2]>=0.28.1",
    "logger>=1.4",
    "openai>=2.14.0",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
]
