[project]
name = "datapallet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "birder>=0.4.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "mcp>=1.26.0",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]
